[package]
name = "ipfix"
version = "0.1.1"
authors = ["Nick Price <nick@spun.io>"]
description = "IPFIX (RFC7011) parser library with JSON export, based on nom"
homepage = "https://github.com/dominotree/rs-ipfix"
repository = "https://github.com/dominotree/rs-ipfix"
license = "MIT"

[dependencies]
nom-derive = "0.8.0"
nom = { version = "6.1.2" }