[package]
name = "ipfix"
version = "0.1.1"
authors = ["Nick Price <nick@spun.io>"]
description = "IPFIX (RFC7011) parser library with JSON export, based on nom"
homepage = "https://github.com/dominotree/rs-ipfix"
repository = "https://github.com/dominotree/rs-ipfix"
license = "MIT"

[dependencies]
nom-derive = "0.8.0"
nom = { version = "6.1.2" }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
bencher = "0.1.5"

[[bench]]
name = "parse"
harness = false